@@ -177,6 +177,12 @@
             <artifactId>sunpkcs11-wrapper</artifactId>
             <version>1.4.10</version>
         </dependency>
+        <dependency>
+            <groupId>iaik</groupId>
+            <artifactId>pkcs11-provider</artifactId>
+            <version>1.9.4</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -200,10 +206,14 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <jvmArguments>
+                        --add-exports=jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED
+                    </jvmArguments>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
